--- a/app/src/main/res/layout/custom_dialog.xml
+++ b/app/src/main/res/layout/custom_dialog.xml
@@ -3,8 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="30sp"
-    android:layout_marginRight="30sp"
+    android:layout_marginLeft="10sp"
+    android:layout_marginRight="10sp"
     android:orientation="vertical">
 
     <FrameLayout
@@ -39,7 +39,7 @@
         android:orientation="horizontal">
     <Button
         android:id="@+id/btnReviewCustomDialog"
-        android:layout_width="0sp"
+        android:layout_width="wrap_content"
         android:layout_weight="0.5"
         android:layout_height="wrap_content"
         android:text="Review Location"
@@ -48,7 +48,7 @@
         />
         <Button
             android:id="@+id/btnExistingCustomDialog"
-            android:layout_width="0sp"
+            android:layout_width="wrap_content"
             android:layout_weight="0.5"
             android:layout_marginLeft="5sp"
             android:background="@drawable/btnripple"
