firebase database done

--- a/app/src/main/res/layout/custom_dialog.xml
+++ b/app/src/main/res/layout/custom_dialog.xml
@@ -3,8 +3,6 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="10sp"
-    android:layout_marginRight="10sp"
     android:orientation="vertical">
 
     <FrameLayout
@@ -35,12 +33,15 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="5sp"
+        android:layout_marginTop="5sp"
+        android:layout_marginBottom="5sp"
+        android:paddingLeft="5sp"
+        android:paddingRight="5sp"
+        android:gravity="center"
         android:orientation="horizontal">
     <Button
         android:id="@+id/btnReviewCustomDialog"
-        android:layout_width="wrap_content"
-        android:layout_weight="0.5"
+        android:layout_width="150sp"
         android:layout_height="wrap_content"
         android:text="Review Location"
         android:background="@drawable/btnripple"
@@ -48,9 +49,8 @@
         />
         <Button
             android:id="@+id/btnExistingCustomDialog"
-            android:layout_width="wrap_content"
-            android:layout_weight="0.5"
-            android:layout_marginLeft="5sp"
+            android:layout_width="150sp"
+            android:layout_marginLeft="10sp"
             android:background="@drawable/btnripple"
             android:layout_height="wrap_content"
             android:text="See existing"
