--- a/app/src/main/res/layout/custom_reviewdialog.xml
+++ b/app/src/main/res/layout/custom_reviewdialog.xml
@@ -46,7 +46,9 @@
             android:id="@+id/etTextBox"
             android:layout_width="match_parent"
             android:layout_height="100sp"
+            android:layout_margin="20dp"
             android:ems="10"
+            android:hint="Comment here"
             android:inputType="textMultiLine" />
 
     </LinearLayout>
@@ -58,9 +60,10 @@
             android:layout_marginTop="5sp"
             android:layout_gravity="center"
             android:layout_marginBottom="5sp"
+            android:textSize="15dp"
             android:background="@drawable/btnripple"
-            android:layout_height="wrap_content"
-            android:text="See existing"
+            android:layout_height="40dp"
+            android:text="Submit"
             android:textAlignment="center"
             />
 </LinearLayout>
