--- a/app/src/main/res/layout/fragment_reviews.xml
+++ b/app/src/main/res/layout/fragment_reviews.xml
@@ -4,6 +4,9 @@
     android:layout_height="match_parent"
     tools:context="com.techease.whereyou.ui.fragments.ReviewsFragment">
 
-
-
+<android.support.v7.widget.RecyclerView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:id="@+id/rvReviews"
+    ></android.support.v7.widget.RecyclerView>
 </FrameLayout>
