chat done with some issues

--- a/app/src/main/res/layout/singlmessagelayout.xml
+++ b/app/src/main/res/layout/singlmessagelayout.xml
@@ -1,12 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_margin="10sp"
-    android:layout_height="100sp"
-    android:background="@drawable/messageshape"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     >
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="10sp"
+        android:layout_gravity="left"
+        android:orientation="vertical"
+        android:id="@+id/leftView"
+        android:background="@drawable/messageshape">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -33,5 +39,40 @@
         android:layout_marginLeft="10sp"
         android:layout_marginRight="15sp"
         />
-
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="10sp"
+        android:orientation="vertical"
+        android:layout_gravity="right"
+        android:id="@+id/rightView"
+        android:background="@drawable/messageshape">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Adam"
+            android:textColor="@color/colorPrimary"
+            android:textStyle="bold"
+            android:padding="5sp"
+            android:layout_marginLeft="5sp"
+            android:layout_marginRight="5sp"
+            android:id="@+id/usernameText2"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="30sp"
+            android:id="@+id/messageText2"
+            android:text="Hello"
+            android:layout_marginLeft="10sp"
+            android:layout_marginRight="15sp"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="20sp"
+            android:id="@+id/timeText2"
+            android:text="9:00 AM"
+            android:layout_marginLeft="10sp"
+            android:layout_marginRight="15sp"
+            />
+    </LinearLayout>
 </LinearLayout>
