--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,11 @@
     <color name="colorPrimaryDark">#3EDF91</color>
     <color name="colorAccent">#FFFFFF</color>
     <color name="colorAccentLight">#716F7B</color>
+    <color name="background_color">#353244</color>
+    <color name="green_color">#3EDF91</color>
+    <color name="rippleeffectcolor">#f816a463</color>
+    <color name="press_login_signup">#C0C0C0</color>
+    <color name="colorWhite">#ffffff</color>
+    <color name="popup_color">#808080</color>
+    <color name="disable_color">#D5D5D5</color>
 </resources>
