--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,7 +12,15 @@
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
-
+    <style name="ToolBarStyle">
+        <item name="android:textColorPrimary">@android:color/white</item>
+        <item name="android:textColorSecondary">@android:color/white</item>
+        <item name="actionMenuTextColor">#000000</item>
+        <item name="android:itemTextAppearance">@style/TextAppearance</item>
+    </style>
+    <style name="TextAppearance">
+        <item name="android:textColor">#000000</item>
+    </style>
 
     <style name="AppTheme.Navigation">
         <item name="windowActionBar">false</item>
