--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,5 +1,4 @@
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -12,13 +11,13 @@
         android:layout_height="wrap_content"
         android:layout_weight="0.1"
         android:orientation="vertical">
-        <fragment android:id="@+id/place_autocomplete_fragment"
+
+        <fragment
+            android:id="@+id/place_autocomplete_fragment"
+            android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/colorAccent"
-            android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
-            />
-
+            android:background="@color/colorAccent" />
 
         <EditText
             android:id="@+id/et_location"
@@ -33,17 +32,15 @@
             android:hint="Location"
             android:inputType="textMultiLine"
             android:padding="10sp"
-            android:visibility="gone"
-            />
+            android:visibility="gone" />
 
     </LinearLayout>
 
-    <com.google.android.gms.maps.MapView
-        android:id="@+id/mapView"
+    <fragment
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.MapFragment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="0.9"
-        android:apiKey="AIzaSyCFrpFrSvjdyu7QedwiUH6z-9IopcLfB0E"
-        />
+        android:layout_weight="0.9" />
 
 </LinearLayout>
