--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
+    android:focusableInTouchMode="true"
     android:orientation="vertical"
     tools:context="com.techease.whereyou.ui.fragments.RegisterFragment">
 
@@ -102,7 +103,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="15dp"
             android:background="@color/colorPrimary"
             android:src="@drawable/next" />
 
@@ -110,7 +111,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="30sp"
+            android:layout_marginTop="10sp"
             android:text="OR"
             android:textColor="@color/colorPrimaryDark"
             android:textSize="20sp"
@@ -123,7 +124,7 @@
             android:layout_gravity="center"
             android:layout_marginLeft="10sp"
             android:layout_marginRight="10sp"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="10dp"
             android:background="@color/colorAccent"
             android:drawableLeft="@drawable/facebook_logo"
             android:drawablePadding="15sp"
@@ -138,9 +139,10 @@
             android:layout_width="220dp"
             android:layout_height="40dp"
             android:layout_gravity="center"
+            android:layout_marginBottom="20dp"
             android:layout_marginLeft="10sp"
             android:layout_marginRight="10sp"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="10dp"
             android:background="@color/colorAccent"
             android:drawableLeft="@drawable/google"
             android:drawablePadding="15sp"
