date time setting done

--- a/app/src/main/res/layout/item_message_received.xml
+++ b/app/src/main/res/layout/item_message_received.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:id="@+id/constraint_parent_layout"
     android:paddingTop="8dp">
 
     <ImageView
@@ -53,8 +54,7 @@
         android:id="@+id/image_uploaded"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="12dp"
         android:background="@drawable/rounded_rectangle_green"
         android:padding="1dp"
         app:layout_constraintLeft_toRightOf="@+id/image_message_profile"
