--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -62,6 +62,16 @@
         android:textColor="@color/colorAccent"
         android:textColorHint="@color/colorAccentLight" />
 
+    <TextView
+        android:id="@+id/tv_forgot_password"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="10sp"
+        android:text="@string/forgot_password"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="20sp" />
+
     <ImageButton
         android:id="@+id/signin_next"
         android:layout_width="wrap_content"
