--- a/app/src/main/res/layout/item_message_received.xml
+++ b/app/src/main/res/layout/item_message_received.xml
@@ -51,10 +51,10 @@
         app:layout_constraintLeft_toRightOf="@+id/text_message_body" />
 
     <FrameLayout
+        android:id="@+id/frame_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:id="@+id/frame_layout"
         android:layout_marginTop="10dp"
         app:layout_constraintLeft_toRightOf="@+id/image_message_profile"
         app:layout_constraintTop_toBottomOf="@+id/text_message_name">
@@ -64,7 +64,8 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:background="@drawable/rounded_rectangle_green"
-            android:padding="1dp" />
+            android:padding="1dp"
+            android:visibility="gone" />
 
         <ProgressBar
             android:id="@+id/progress_bar"
